--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,18 @@
 
   {%- include head.html -%}
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1JPK0KLEC9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-1JPK0KLEC9");
+  </script>
+
   <body>
 
     {%- include header.html -%}
