Update configuration and layout files. Update About page description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <title>{{ page.title }}</title>
+  <link href="https://feascript.com/FEAScript-website.css" rel="stylesheet" type="text/css" />
+</head>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {%- include head.html -%}
