--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 <head>
   <meta charset="utf-8">
-  <title>{{ page.title }}</title>
+  <title>{% if page.url == "/" %}{{ site.title }}{% else %}{{ site.title }}: {{ page.title }}{% endif %}</title>
   <link href="https://feascript.com/FEAScript-website.css" rel="stylesheet" type="text/css" />
-</head>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {%- include head.html -%}
   <link rel="icon" type="image/x-icon" href="https://feascript.com/assets/favicon.ico" />
+  {%- include head.html -%}
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1JPK0KLEC9"></script>
@@ -20,60 +18,61 @@
 
     gtag("config", "G-1JPK0KLEC9");
   </script>
+</head>
 
-  <body>
+<body>
 
-    {%- include header.html -%}
+  {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+  <main class="page-content" aria-label="Content">
+    <div class="wrapper">
+      {{ content }}
+    </div>
+  </main>
 
-    <footer class="site-footer h-card">
-      <data class="u-url" href="{{ "/" | relative_url }}"></data>
+  <footer class="site-footer h-card">
+    <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
-      <div class="wrapper">
+    <div class="wrapper">
 
-        <h2 class="footer-heading">{{ site.title | escape }}</h2>
+      <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
-        <div class="footer-col-wrapper">
-          <div class="footer-col footer-col-1">
-            <ul class="contact-list">
-              <li class="p-name">
-                {%- if site.author -%}
-                  {{ site.author | escape }}
-                {%- else -%}
-                  {{ site.title | escape }}
-                {%- endif -%}
-              </li>
-              {%- if site.email -%}
-                <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+      <div class="footer-col-wrapper">
+        <div class="footer-col footer-col-1">
+          <ul class="contact-list">
+            <li class="p-name">
+              {%- if site.author -%}
+                {{ site.author | escape }}
+              {%- else -%}
+                {{ site.title | escape }}
               {%- endif -%}
-            </ul>
-          </div>
+            </li>
+            {%- if site.email -%}
+              <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {%- endif -%}
+          </ul>
+        </div>
 
-          <div class="footer-col footer-col-2">
-            {%- include social.html -%}
-          </div>
+        <div class="footer-col footer-col-2">
+          {%- include social.html -%}
+        </div>
 
-          <div class="footer-col footer-col-3">
-            <p>
-              <a href="https://feascript.com/" target="_blank">
-                <img src="https://feascript.github.io/FEAScript-website/assets/FEAScriptLogo.png" alt="FEAScript Logo" class="footer-logo" style="width: 40px; height: auto;">
-              </a>
-            </p>
-            <p>
-              {{ site.description | escape }}
-            </p>
-          </div>
-
+        <div class="footer-col footer-col-3">
+          <p>
+            <a href="https://feascript.com/" target="_blank">
+              <img src="https://feascript.github.io/FEAScript-website/assets/FEAScriptLogo.png" alt="FEAScript Logo" class="footer-logo" style="width: 40px; height: auto;">
+            </a>
+          </p>
+          <p>
+            {{ site.description | escape }}
+          </p>
         </div>
 
       </div>
 
-    </footer>
-  </body>
+    </div>
+
+  </footer>
+</body>
 
 </html>
